--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -1,2 +1,4 @@
-<h1>Welcome#about</h1>
-<p>Find me in app/views/welcome/about.html.erb</p>
+<h1>FoodSweep: Revolutionizing shopping one day at a time!</h1>
+<p>Grocery shopping is better as a team!</p>
+<p>Say you and your friends are throwing a surprise birthday bash for another friend. You have a long list of supplies and gifts that you need to buy for this party that can be found at the grocery store or supermarket.</p>
+<p>With FoodSweep, you and your friends can expedite the shopping process by having a list that updates in real time, so you can split up and keep track of what items have been grabbed, and which ones are still on the list!</p>
